# observaciones

./: app.py  config.py  extracted_sections_Cerro Corona - Observaciones - 01 - ANA.pdf.xlsx  pyproject.toml  requirements.txt
temp_credentials/: credentials.json
ui/: components.py
utils/: auth_utils.py  image_utils.py  pdf_utils.py  text_utils.py
