[project]
name = "observaciones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.4",
    "plotly>=5.24.1",
    "streamlit-plotly-events>=0.0.6",
    "streamlit>=1.40.1",
    "typing-extensions>=4.12.2",
    "google-cloud-aiplatform>=1.72.0",
    "google-generativeai>=0.8.3",
    "openpyxl>=3.1.5",
]
